[metadata]
name = ginjinn2_pollentube
version = 0.0.1
description = A GinJinn2 tool for detecting pollen tubes.
long_description = file: README.md, CHANGELOG.md, LICENSE
license = BSD 3-clause

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas
    numpy
    importlib_metadata
    click
    cloup
    fil_finder
    astropy

[options.package_data]
* = *.txt, *.rst

[options.entry_points]
console_scripts =
    ginjinn_pollentube = ginjinn2_pollentube.cli:main
